--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "express-fileupload": "^1.1.5"
+    "express-fileupload": "^1.1.5",
+    "file-type": "^12.0.0",
+    "multer": "^1.4.1"
   },
   "engines": {
     "node": "8.x"
