--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/lukelmg/PDFedit#readme",
   "dependencies": {
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "hummus": "^1.0.110",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1"
   }
 }
