--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "^4.16.4",
     "express-fileupload": "^1.1.5",
     "file-type": "^12.0.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "hummus": "^1.0.110",
+    "lodash": "^4.17.21"
   },
   "engines": {
     "node": "12.x"
