--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "file-type": "^12.0.0",
     "multer": "^1.4.2",
     "hummus": "^1.0.110",
-    "lodash": "^4.17.21",
-    "fs": "^0.0.2"
+    "lodash": "^4.17.21"
   },
   "engines": {
     "node": "12.x"
